unpackaged/main/default/objects/Egnyte_OAuth__c/Egnyte_OAuth__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Egnyte OAuth</label>
</CustomObject>