unpackaged/main/default/objects/Egnyte_OAuth__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>Current Egnyte OAuth access token.</description>
    <label>Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>