unpackaged/main/default/objects/Egnyte_OAuth__c/fields/OAuth_State__c.field-meta.xml
<CustomField>
    <fullName>OAuth_State__c</fullName>
    <description>Temporary CSRF state for the in-progress Egnyte authorization request.</description>
    <label>OAuth State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>