unpackaged/main/default/objects/Egnyte_OAuth__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <description>Egnyte OAuth refresh token used to mint new access tokens.</description>
    <label>Refresh Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>