unpackaged/main/default/objects/Egnyte_OAuth__c/fields/Token_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Token_Expires_At__c</fullName>
    <description>When the stored Egnyte access token expires.</description>
    <label>Token Expires At</label>
    <type>DateTime</type>
</CustomField>